[feat] Return form ui and database wiring

--- a/app/assets/stylesheets/application_redesign.css.scss
+++ b/app/assets/stylesheets/application_redesign.css.scss
@@ -22,6 +22,7 @@
 @import 'redesign/forms';
 @import 'redesign/about';
 @import 'redesign/user';
+@import 'redesign/returns';
 @import 'redesign/why_us';
 @import 'redesign/fame_chain';
 @import 'redesign/facebook';
