--- a/app/views/spree/admin/product_making_options/_form.html.slim
+++ b/app/views/spree/admin/product_making_options/_form.html.slim
@@ -6,6 +6,14 @@
     = f.select :option_type, options_from_collection_for_select(ProductMakingOption::OPTION_TYPES, :to_s, :humanize)
     = f.error_message_on :option_type
 
+  = f.field_container :active, class: ['checkbox'] do 
+    = f.label :active do
+      = t(:active)
+      span.required *
+      br
+    = f.check_box :active, class: 'checkbox'
+    = f.error_message_on :active
+
   = f.field_container :price do 
     = f.label :price do
       = t(:price)
@@ -21,5 +29,3 @@
       br
     = f.text_field :currency, class: 'currency'
     = f.error_message_on :currency
-
-
