[fix] fixed error appearing for disabled colors

--- a/app/views/products/details/show.html.slim
+++ b/app/views/products/details/show.html.slim
@@ -273,7 +273,8 @@ hr
     .row
       .col-md-12.custom
         h2=  "Custom Colors +#{@product.custom_color_price}"
-        p.explanation.hidden Express making is only available on our recommended colours
+        p.explanation style="text-align: center; display: none"
+          Express making is only available on our recommended colours
 
         - @product.custom_color_options.each_slice(2) do |colors|
             - colors.each do |color|
