[yolo] More css tweak

--- a/app/assets/stylesheets/redesign/_user.css.scss
+++ b/app/assets/stylesheets/redesign/_user.css.scss
@@ -189,7 +189,7 @@ h1.order {
 a.btn.return {
   color: #FFFFFF;
   width: 92%;
-  background-color: black;
+  background-color: #444444;
   font-size: 12px;
 
   &:hover {
