--- a/app/views/order_return_request_mailer/email.text.erb
+++ b/app/views/order_return_request_mailer/email.text.erb
@@ -2,13 +2,23 @@
 Order Number: <%= @order_return_request.number %>
 Order Completed: <%= @order_return_request.completed_at.to_date %>
 
+Customer Details
+============================================================
+Customer: <%= @order_return_request.name %>
+Email: <%= @email %>
+Phone Number: <%= @order_return_request.phone_number %>
+Shipping Address: <%= @order_return_request.shipping_address %>
+============================================================
+
+
 <% @order_return_request.return_request_items.each do |item| %>
 --------------------------------------------
-<% if item.return_or_exchange? %>
 <%= item.action.upcase %>
-<% end %>
-Action: <%= item.action.titleize %>
-Reason: <%= item.reason_category %> <%= item.reason %>
+
+<% if item.return_or_exchange? -%>
+<%= item.reason_category %>
+<%= item.reason %>
+<% end -%>
 
 Item: <%= item.style_name %>
 Details: <%= "Size:#{item.country_size.to_i}, Color: #{item.colour_name}" %>
