--- a/app/views/contacts/success.html.slim
+++ b/app/views/contacts/success.html.slim
@@ -5,4 +5,4 @@
 
 .page-content.contact
   .container
-    p One of the Fame team will be in contact with you ASAP.
+    p We won't play hard to get, we'll get back to you ASAP.
