--- a/app/views/layouts/redesign/header/_my_account_dropdown_mobile.html.slim
+++ b/app/views/layouts/redesign/header/_my_account_dropdown_mobile.html.slim
@@ -1,6 +1,6 @@
 - if spree_user_signed_in?
-  a.menu-item--link.active-hover href=profile_path
-    | my account
+  a.menu-item--link href='#'
+    = image_tag "_icons/my-account.svg", class: 'nav-mobile-logo', alt: 'my account'
   .account-menu.mega-menu.hidden-sm.account-list
     .account.container-fluid
       ul
