[feat] Only display return button if item is returnable

--- a/app/views/users/returns/success.html.slim
+++ b/app/views/users/returns/success.html.slim
@@ -6,3 +6,4 @@
 .page-content.contact
   .container
     p We won't play hard to get, we'll get back to you ASAP.
+    p Please wait for confirmation before sending your dress back.
