--- a/app/views/users/orders/index.html.slim
+++ b/app/views/users/orders/index.html.slim
@@ -45,4 +45,5 @@
                   td data-title="total" = order.display_total
                   - if Features.active?(:order_returns, current_spree_user)
                     td.returns-column
-                      = link_to 'return or exchange', new_user_returns_path(:order_id => order.number), :class => 'btn return'
+                      - if order.returnable?
+                        = link_to 'return or exchange', new_user_returns_path(:order_id => order.number), :class => 'btn return'
