[fix] Rename everything

--- a/app/views/landing_pages/all_size.html.slim
+++ b/app/views/landing_pages/all_size.html.slim
@@ -1,10 +1,10 @@
 = render :partial => 'landing_pages/common'
 
-.page-content.all-sizes
+.page-content.all-size
   ul.rslides
     - (1..8).each do |n|
       li
-        = image_tag "edits/all-sizes/#{n}.jpg", alt: "All Sizes #{n}", class: 'img-responsive portrait-img'
+        = image_tag "edits/all-size/#{n}.jpg", alt: "All Sizes #{n}", class: 'img-responsive portrait-img'
 
   .page-content.products-collections.category
     .container.relative.products-collection
