--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -182,9 +182,9 @@ ruby:
                     p.text-center.edit-title Break Hearts not Bank Accounts
 
                 .col-md-2
-                  = link_to all_sizes_collection_path do
+                  = link_to all_size_collection_path do
                     .image-container
-                      = image_tag src='edits/all-sizes/nav.jpg', :class => 'img-responsive', :alt => 'All Sizes'
+                      = image_tag src='edits/all-size/nav.jpg', :class => 'img-responsive', :alt => 'All Sizes'
                     p.text-center.edit-title All Size
 
           li.menu-item
