[fix] Edit name

--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -185,7 +185,7 @@ ruby:
                   = link_to all_size_collection_path do
                     .image-container
                       = image_tag src='edits/all-size/nav.jpg', :class => 'img-responsive', :alt => 'All Sizes'
-                    p.text-center.edit-title All Size
+                    p.text-center.edit-title I'll Have What She's Having
 
           li.menu-item
             = link_to 'Blog', 'http://fameandpartners.tumblr.com/', class: 'menu-item--link'
