add disabled classes

--- a/app/assets/stylesheets/application_redesign.css.scss
+++ b/app/assets/stylesheets/application_redesign.css.scss
@@ -2,6 +2,7 @@
 
 @import 'redesign/vars';
 @import 'redesign/mixins';
+@import 'redesign/extras/helpers';
 
 @import 'libs/vex.css';
 @import 'libs/vex-theme-flat-attack.css';
