--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -82,16 +82,16 @@ ruby:
                         | Fit Guarantee
               .mega-menu--secondary
                 .mega-menu-banner 
-                  .mega-menu-banner-container
-                    .title 
+                  a.mega-menu-banner-container href="/getitfirst"
+                    span.title 
                       span Get it
                       br
                       span first.
-                    p 
+                    span.p 
                       ' Dresses delivered 
                       br
                       ' in 2-5 business days
-                    a.btn.btn-sm.btn-block href="/getitfirst" Shop now
+                    span.btn.btn-sm.btn-block Shop now
                 .container-fluid.max-width-100
                   .row
                     .col-md-3.col-lg-2.col-md-offset-4
