[fix] make get it first menu entirely clickable

--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -81,8 +81,8 @@ ruby:
                         span.fit-guarantee.menu-icon
                         | Fit Guarantee
               .mega-menu--secondary
-                .mega-menu-banner 
-                  a.mega-menu-banner-container href="/getitfirst"
+                a.mega-menu-banner href="/getitfirst"
+                  .mega-menu-banner-container
                     span.title 
                       span Get it
                       br
