--- a/app/assets/stylesheets/redesign/_header.css.scss
+++ b/app/assets/stylesheets/redesign/_header.css.scss
@@ -409,3 +409,13 @@ ul.secondary.pull-right {
     }
   }
 }
+
+li#cart-trigger {
+  span#cart-item-count {
+    @media (max-width: 991px) {
+      top: 0.7rem;
+      left: -1.7rem;
+      position: relative;
+    }
+  }
+}
