--- a/app/views/layouts/redesign/header/_my_account_dropdown_mobile.html.slim
+++ b/app/views/layouts/redesign/header/_my_account_dropdown_mobile.html.slim
@@ -1,7 +1,8 @@
 - if spree_user_signed_in?
   a.menu-item--link href='#'
     = image_tag "_icons/my-account.svg", class: 'nav-mobile-logo', alt: 'my account'
-  .account-menu.mega-menu.hidden-sm.account-list
+
+  .account-menu.mega-menu.account-list
     .account.container-fluid
       ul
         li
@@ -13,4 +14,5 @@
         li
           a href="/logout" LOGOUT
 - else
-  = link_to 'my account', profile_path, :class =>"menu-item--link active-hover"
+  = link_to profile_path, :class =>"menu-item--link active-hover" do
+    = image_tag "_icons/my-account.svg", class: 'nav-mobile-logo', alt: 'my account'
