[tweak] add colours for new styles

--- a/app/assets/stylesheets/redesign/product/_product_colours.css.scss
+++ b/app/assets/stylesheets/redesign/product/_product_colours.css.scss
@@ -148,6 +148,16 @@
         filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f39', endColorstr='#f39', GradientType=1 );
       }
 
+      .color-ivory-and-navy {
+        background: linear-gradient(-12.5deg, rgba(0,0,76,1) 0%, rgba(0,0,76,1) 50%, rgba(255,255,240,1) 51%, rgba(255,255,240,1) 71%, rgba(255,255,240,1) 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f39', endColorstr='#f39', GradientType=1 );
+      };
+
+      .color-ivory-and-pink {
+        background: linear-gradient(-12.5deg, rgba(255,51,153,1) 0%, rgba(255,51,153,1) 50%, rgba(255,255,240,1) 51%, rgba(255,255,240,1) 71%, rgba(255,255,240,1) 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f39', endColorstr='#f39', GradientType=1 );
+      }
+
       .color-lavender {
         background-color: #d9c0e7;
       }
@@ -170,6 +180,11 @@
 
       .color-light-pink {
         background-color: #ffecef;
+      }
+
+      .color-light-pink-and-charcoal {
+        background: linear-gradient(-12.5deg, rgba(60,60,60,1) 0%, rgba(60,60,60,1) 50%, rgba(255,236,239,1) 51%, rgba(255,236,239,1) 71%, rgba(255,236,239,1) 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#050505', endColorstr='#fcf9f9', GradientType=1 );
       }
 
       .color-lilac {
@@ -289,6 +304,10 @@
 
       .color-sage {
         background-color: #826a77;
+      }
+
+      .color-sage-green {
+        background-color: #95c7bc;
       }
 
       .color-salmon {
