--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -172,7 +172,7 @@ ruby:
                 .col-md-2
                   = link_to bridesmaid_collection_path do
                     .image-container.bridesmaids
-                      = image_tag src='edits/BRIDESMAIDS/1_171114_F&P_-BRIDESMAIDS-edits-nav.jpg', :class => 'img-responsive', :alt => 'Our Beautiful Bridesmaids Collection'
+                      = image_tag src='edits/bridesmaids/nav.jpg', :class => 'img-responsive', :alt => 'Our Beautiful Bridesmaids Collection'
                     p.text-center.edit-title Our Beautiful Bridesmaids Collection
 
                 .col-md-2
