--- a/app/views/layouts/redesign/_footer.html.slim
+++ b/app/views/layouts/redesign/_footer.html.slim
@@ -28,11 +28,11 @@
   .lower-row
     .col-md-3.col-sm-8
       - locale_options = options_for_select({'AU' => site_version_path('au'), 'US' => site_version_path('us')}, site_version_path(current_site_version.code))
-      = select_tag :locale_select, locale_options, 'data-backlink' => get_hreflang_link, 'data-minimum-results-for-search' => 'Infinity'
+      = select_tag :locale_select, locale_options, 'data-minimum-results-for-search' => 'Infinity'
 
       = content_for :inline_javascript do
         | $('#locale_select').select2().on('change', function (e) {
-        |   window.location = $(this).val() + '?' + 'backlink=' + $(this).data('backlink');
+        |   window.location = $(this).val();
         | });
 
     .col-md-6.col-sm-4.copyright
