--- a/app/views/spree/admin/orders/_squished_shipment_tracking_form.html.slim
+++ b/app/views/spree/admin/orders/_squished_shipment_tracking_form.html.slim
@@ -1,7 +1,7 @@
 - shipment = line_item.shipment
 - if total_items_in_order == 1
   = render partial: 'shipment_tracking_number_form', locals: { line_item: line_item }
-- elsif shipment.shipped?
+- elsif shipment && shipment.shipped?
     = render partial: 'shipped_shipment_cells', locals: { shipment: shipment }
 - elsif total_items_in_order > 1 && position.zero?
   td colspan=2 rowspan=total_items_in_order
