--- a/app/views/admin/bulk_order_updates/show.html.slim
+++ b/app/views/admin/bulk_order_updates/show.html.slim
@@ -33,13 +33,14 @@ table
 table
   thead
     tr
-      th colspan=9 CSV
+      th colspan=10 CSV
       th Matching
       th colspan=10 Spree
     tr
       th #
       th order_date
       th order_number
+      th line_item
       th style_name
       th size
       th quantity
@@ -66,6 +67,7 @@ table
       td = liu.row_number
       td = liu.order_date
       td = liu.order_number
+      td = liu.raw_line_item
       td = liu.style_name
       td = liu.size
       td = liu.quantity
