--- a/app/views/spree/order_mailer/confirm_email.html.slim
+++ b/app/views/spree/order_mailer/confirm_email.html.slim
@@ -18,7 +18,7 @@ table align="center" border="0" cellpadding="0" cellspacing="0" width="100%"
             tr
               td style="color: #666; font: 400 13px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif;"
                 p style="margin: 0 0 20px;" Hi #{@order.full_name},
-                p style="margin: 0;" 
+                p style="margin: 0;"
                   | Thanks for shopping with Fame & Partners. Your order is being processed, and we'll send you another email to confirm when it has been shipped.
             tr
               td height="30"
@@ -62,9 +62,29 @@ table align="center" border="0" cellpadding="0" cellspacing="0" width="100%"
             tr
               td height="40"
             tr
+              td
+
+                p
+                  |You can log in to track your order and manage your account:
+                  = login_url
+
+                - if @order.user && @order.user.automagically_registered?
+                  p If you're a new customer, we've set up an account for you.
+
+                  p
+                    | Your username is:
+                    = @order.email
+
+                  p
+                    | Your temporary password is:
+                    = @order.number
+
+                  p We suggest you change this password once you've logged in
+
+            tr
               td style="color: #666; text-transform: uppercase; font: 400 13px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif;"
                 a href="http://fameandpartners.com/faqs" style="color: #666; text-transform: uppercase; text-decoration: none; font: 400 13px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif;" FAQ
-                '  |  
+                '  |
                 span style="color: #666; text-transform: uppercase; text-decoration: none; font: 400 13px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif;" 1300 924 860
             tr
               td height="27"
