[feat][admin] add preview link to to product edit page

--- a/app/views/spree/admin/shared/_product_tabs.html.erb
+++ b/app/views/spree/admin/shared/_product_tabs.html.erb
@@ -9,6 +9,9 @@
 <% content_for :sidebar do %>
   <nav class="menu">
     <ul data-hook="admin_product_tabs">
+      <li>
+        <%= link_to_with_icon 'icon-eye-open', 'Preview on Site', @product, { target: '_blank' } %>
+      </li>
       <li<%== ' class="active"' if current == 'Product Details' %>>
         <%= link_to_with_icon 'icon-edit', t(:product_details), edit_admin_product_url(@product) %>
       </li>
